Removal of Instance currentIndex Which Created a New Integer() in Class Method insertReplaceStatementData() and Applied Directly in Context by Integer.valueOf().